--- a/ui/components/item-actions-save/style.module.css
+++ b/ui/components/item-actions-save/style.module.css
@@ -1,6 +1,6 @@
 /** Remove this file if we don't have styles for the component **/
 .base {
-  background: var(--color-surface-base);
+  background: var(--color-surface-menu);
   border-radius: 10px;
   box-shadow: var(--shadow-high);
   min-width: 100px;
